ispCP ω 1.0.3 Changelog
~~~~~~~~~~~~~~~~~~~~~~~~~~

2009-10-20 Christian Hernmarck
	- ENGINE:
		* Fixed #2021: Error in backup

2009-10-17 Benedikt Heintel
	- ENGINE:
		* Fixed #2033: ispcp-dsk-quota message
	- GUI:
		* Fixed #2029: Ispcp debugger doesn't work when there are adresses forward + normal at the same time

2009-10-16 Benedikt Heintel
	- TOOLS:
		* Fixed #2031: Updated phpMyAdmin to version 3.2.2.1

2009-10-16 Laurent Declercq
	- GUI:
		* Fixed #2035: Review Domain name syntax ( 'a.de' is not allowed - but denic soon allows it )

2009-10-15 Benedikt Heintel
	- LANGUAGES:
		* Updated Catalan
		* Updated Polish

2009-10-11 Benedikt Heintel
	- LANGUAGES:
		* Updated Japanese
		* Updated German (Germany)

2009-10-06 Laurent Declercq
	- CONFIGS:
		* Fixed: Pma - impossible indirect connections with suhosin

2009-10-05 Laurent Declercq
	- TOOLS:
		* Fixed #2014: Error when you open pma via link from the customer interface

2009-10-05 Benedikt Heintel
	- LANGUAGES:
		* Updated Japanese
		* Updated Spanish (Spain)

2009-09-30 Daniel Andreca
	- LANGUAGES:
		* Updated Finnish
	- CONFIGS:
		* Updated database structure


2009-09-30 Laurent Declercq
	- TOOLS:
		* Fixed some typo errors in webmail/src/login.php (Thx to Henriks)

2009-09-29 Daniel Andreca
	- ENGINE:
		* Fixed #2011: Daily quota script generates errors (missing db in /var/lib/mysql)
	- LANGUAGES:
		* Updated Danish

2009-09-29 Laurent Declercq
	- CONFIG:
		* Fixed #2002: openSUSE 11.1 - Unable to add mail user
		* Fixed SASL Authentication failed (openSUSE):
			- Added smtpd.conf configuration file for postfix/sasl
			- Added new variables related to MTA/SASL in /etc/ispcp/ispcp.conf (openSUSE)
	- DISTS:
		* Fixed postfix warning: "not owned by root: /var/spool/postfix" (openSUSE)
		* Fixed imapd warning related to famd (See http://www.courier-mta.org/FAQ.html#fam) (openSUSE)
		* Fixed authdaemond warning related to missing modules: "file not found" (openSUSE)
	- DOCS: